Add code for angular-16.2.0 create-common-ui-lib.
[Url: razroo.com/community/angular-16.2.0/create-common-ui-lib/create-common-ui-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,9 @@
     "paths": {
       "@test-henry-jello-one/common/styles": [
         "libs/common/styles/src/index.ts"
+      ],
+      "@test-henry-jello-one/common/ui": [
+        "libs/common/ui/src/index.ts"
       ]
     }
   },
