Add code for angular-16.2.0 add-homepage-lib.
[Url: razroo.com/community/angular-16.2.0/add-homepage/add-homepage-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,9 @@
       ],
       "@test-henry-jello-one/common/ui": [
         "libs/common/ui/src/index.ts"
+      ],
+      "@test-henry-jello-one/home": [
+        "libs/home/src/index.ts"
       ]
     }
   },
