Add code for angular-16.2.0 create-common-services-lib.
[Url: razroo.com/community/angular-16.2.0/add-common-infrastructure/create-common-services-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,9 @@
       ],
       "@test-henry-jello-one/home": [
         "libs/home/src/index.ts"
+      ],
+      "@test-henry-jello-one/common/common-services": [
+        "libs/common/common-services/src/index.ts"
       ]
     }
   },
