--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,9 @@
       ],
       "@test-henry-jello-one/common/common-services": [
         "libs/common/common-services/src/index.ts"
+      ],
+      "@test-henry-jello-one/common/common-guards": [
+        "libs/common/common-guards/src/index.ts"
       ]
     }
   },
