--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,9 @@
       ],
       "@test-henry-jello-one/common/common-guards": [
         "libs/common/common-guards/src/index.ts"
+      ],
+      "@test-henry-jello-one/data-access": [
+        "libs/data-access/src/index.ts"
       ]
     }
   },
