Add code for angular-16.2.0 add-data-services-lib.
[Url: razroo.com/community/angular-16.2.0/data-access-infrastructure/add-data-services-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,6 +35,9 @@
       ],
       "@test-henry-jello-one/data-access": [
         "libs/data-access/src/index.ts"
+      ],
+      "@test-henry-jello-one/data-services": [
+        "libs/data-services/src/index.ts"
       ]
     }
   },
