--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,9 @@
       ],
       "@test-henry-jello-one/data-services": [
         "libs/data-services/src/index.ts"
+      ],
+      "@test-henry-jello-one/data-graphql": [
+        "libs/data-graphql/src/index.ts"
       ]
     }
   },
