--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -44,6 +44,9 @@
       ],
       "@test-henry-jello-one/data-models": [
         "libs/data-models/src/index.ts"
+      ],
+      "@test-henry-jello-one/common/common-environment": [
+        "libs/common/common-environment/src/index.ts"
       ]
     }
   },
